Remove no-cors and fix styling when too short

--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,7 @@
-html, body, #page {
+  html, body {
+    display: flex;
+  }
+  html, body, #page {
     width: 100%;
     height: 100%;
     margin: 0;
